2.0.18
Fix issue with Invoke-BcContainerCodeunit
Fix issue where Invoke-BcContainerCodeUnit fails on 19.0 containers
Issue #2167 support different folders for external SQL Server
Fix Run-ConnectionTestToBcContainer on 19.0

2.0.17
Add paramater internalsVisibleTo to Publish-BcContainerApp and Replace-DependenciesInAppFile in order to publish an app with internals visible to another app during development
Support Windows 11 build numbers
Add new function Run-BCPTTestsInBcContainer
Issue #2129 add Windows 10 21H2
Support disabledTests.json in testfolders in Run-AlPipeline
Issue #2130 patch start.ps1 if using an old generic image on pre 15.0 NAV/BC
Fix issue where a session cannot be created to a newly created container before ~5 minutes on Windows 11
Add BcptTestFolders to Run-AlPipeline
Remove Performance Tool shortcut if created
New-BcImage fails on newer Windows versions due to RoboCopy offload
Do not use runtime packages in Import-TestToolkitToBcContainer
Issue #2110 BC NextMajor (20.0) error when importing ConfigPackage

2.0.16
Issue #2023 Invoke-NavContainerAPI doesnt support nested hashtables
Add ApplicationInsightsConnectionString to Run-AlPipeline to support new app.json property. This value will be used instead of ApplicationInsightsKey if runtime >= 7.2 or bcVersion >= 18.2. (Thanks TheNCuber)
Support different extension on license files (thanks SBalslev)
Map Ukraine to w1 in mapCountryCode, allowing to create ua containers (thanks Sergeyol)
Add parameter CustomCodeCops to Run-AlPipeline and Compile-AppInBcContainer to allow for specifying custom code cops (thanks jfamvg)
Use Latest shipped AL Language Extension by default for all shipped version in Run-AlValidation
Increased support for Github Actions in Run-AlPipeline and Run-TestsInBcContainer
Convert-BcAppsToRuntimePackages: Allow to skip failing apps, run scriptblock after each processed runtime (Thanks MODUSCarstenScholling)