@@ -3,6 +3,7 @@ Fix issue with Invoke-BcContainerCodeunit
 Fix issue where Invoke-BcContainerCodeUnit fails on 19.0 containers
 Issue #2167 support different folders for external SQL Server
 Fix Run-ConnectionTestToBcContainer on 19.0
+Setup-TraefikContainerForBcContainers use hyperv by default when OS version is later than ltsc2019
 
 2.0.17
 Add paramater internalsVisibleTo to Publish-BcContainerApp and Replace-DependenciesInAppFile in order to publish an app with internals visible to another app during development
